# dismecpp

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  stats_basic.json  stats_extensive.json  stats_iter.json  stats_perf.json
.github/: toolchain.py
.github/workflows/: build.yml  clang-tidy.yml  docs.yml  test.yml
cmake/: compile-options.cmake
doc/: stats.md  warnings.md
docs/: README_8md.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8cpp_source.html  app_8h.html  app_8h_source.html  binding_8h.html  binding_8h.js  binding_8h_source.html  cascade_8cpp.html  cascade_8cpp.js  cascade_8cpp_source.html  cascade_8h.html  cascade_8h_source.html  cg_8cpp.html  cg_8cpp.js  cg_8cpp_source.html  cg_8h.html  cg_8h_source.html  classPyWrapper-members.html  classPyWrapper.html  classPyWrapper.js  classTrainingProgram-members.html  classTrainingProgram.html  classTrainingProgram.js  classanonymous__namespace_02cascade_8cpp_03_1_1CombinedWeightInitializer-members.html  classanonymous__namespace_02cascade_8cpp_03_1_1CombinedWeightInitializer.html  classanonymous__namespace_02cascade_8cpp_03_1_1CombinedWeightInitializer.js  classanonymous__namespace_02minimizer_8cpp_03_1_1MockMinimizer-members.html  classanonymous__namespace_02minimizer_8cpp_03_1_1MockMinimizer.html  classanonymous__namespace_02minimizer_8cpp_03_1_1MockMinimizer.js  classanonymous__namespace_02numa_8cpp_03_1_1NodeData-members.html  classanonymous__namespace_02numa_8cpp_03_1_1NodeData.html  classanonymous__namespace_02numa_8cpp_03_1_1NodeData.js  classanonymous__namespace_02statistics_8cpp_03_1_1DefaultGatherer-members.html  classanonymous__namespace_02statistics_8cpp_03_1_1DefaultGatherer.html  classanonymous__namespace_02statistics_8cpp_03_1_1DefaultGatherer.js  classdismec_1_1BinaryData-members.html  classdismec_1_1BinaryData.html  (+1051 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+132 more)
python/: convert_tfidf.py  evaluation.py  make_weights.py  merge_predictions.py
python/dismec/: __init__.py  postprocess.py  preprocess.py  propensity.py  stats.py
python/unittests/: dataset.py  training.py
src/: CMakeLists.txt  app.cpp  app.h  cascade.cpp  config.h  fwd.h  hash_vector.cpp  hash_vector.h  hyperparams.cpp  hyperparams.h  matrix_types.h  predict.cpp  pybind.cpp  test.cpp  train.cpp
src/data/: data.cpp  data.h  transform.cpp  transform.h  types.h
src/io/: common.cpp  common.h  common_test.cpp  model-io.cpp  model-io.h  numpy.cpp  numpy.h  prediction.cpp  prediction.h  slice.cpp  slice.h  test.cpp  weights.cpp  weights.h  xmc.cpp  xmc.h
src/model/: dense.cpp  dense.h  dense_test.cpp  model.cpp  model.h  sparse.cpp  sparse.h  submodel.h
src/objective/: dense_and_sparse.cpp  dense_and_sparse.h  generic_linear.cpp  generic_linear.h  linear.cpp  linear.h  margin_losses.h  objective.cpp  objective.h  pointwise.h  reg_sg_hinge_test.cpp  reg_sq_hinge.cpp  reg_sq_hinge.h  reg_sq_hinge_detail.h  regularizers.h  regularizers_imp.cpp  regularizers_imp.h
src/parallel/: numa.cpp  numa.h  runner.cpp  runner.h  task.h  thread_id.h
src/prediction/: evaluate.cpp  evaluate.h  metrics.cpp  metrics.h  prediction.cpp  prediction.h
src/python/: binding.h  py_data.cpp  py_train.cpp
src/solver/: cg.cpp  cg.h  line_search.cpp  line_search.h  minimizer.cpp  minimizer.h  newton.cpp  newton.h  null.cpp  null.h
src/stats/: collection.cpp  collection.h  histogram.cpp  histogram.h  stat_id.h  statistics.cpp  statistics.h  stats_base.h  timer.cpp  timer.h  tracked.cpp  tracked.h
src/test/: test_header.cpp.in  test_headers.cpp
src/tools/: CMakeLists.txt  labelstats.cpp  tfidf.cpp
src/training/: cascade.cpp  cascade.h  dismec.cpp  dismec.h  initializer.h  postproc.cpp  postproc.h  spec.h  statistics.cpp  statistics.h  training.cpp  training.h  weighting.cpp  weighting.h
src/training/init/: avg_of_pos.cpp  constant.cpp  msi.cpp  multi_pos.cpp  numpy.cpp  ova-primal.cpp  pretrained.cpp  subset.cpp  subset.h  zero.cpp
src/training/postproc/: combine.cpp  generic.h  reorder.cpp  sparsify.cpp
src/utils/: confusion_matrix.h  conversion.h  eigen_generic.h  fast_sparse_row_iter.h  hash_vector.cpp  hash_vector.h  hyperparams.cpp  hyperparams.h  macros.h  opaque_int.h  sum.h  test_utils.cpp  test_utils.h  throw_error.h  type_helpers.h
test/: Hv.txt  eurlex-test.py  g.txt
test_data/reference-weights/: eurlex-simple.model.weights-0-255  eurlex-sparse.model.weights-0-255
